Minor schema refactor, add more repos and sensor related endpoints
