# src/main/java/org/zeus/model/SensorEventType.java
@@ -1,0 +1,7 @@
+package org.zeus.model;
+
+public enum SensorEventType {
+    MEASUREMENT,
+    CONNECTED,
+    OFFLINE
+}
